--- a/WEBSOCKET/ws-ovpn.service
+++ b/WEBSOCKET/ws-ovpn.service
@@ -1,6 +1,6 @@
 [Unit]
-Description=Python Proxy Mod By HOKAGE LEGEND
-Documentation=https://t.me/hokagelegend1
+Description=Python Proxy Mod By GENZNET
+Documentation=https://t.me/genznet_vpn
 After=network.target nss-lookup.target
 
 [Service]
